Mini alignment issue fixed

--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ input:focus, textarea:focus, select:focus {
 }
 
 .descriptions {
-  margin-top: 70px;
+  margin-top: 72px;
   width: 120px;
 }
 
